Fix horizontal scroll isue
Prevent side scrolling on concierge and about page

--- a/client/scripts/frame/frame.sass
+++ b/client/scripts/frame/frame.sass
@@ -140,6 +140,7 @@ h4
   //overflow: auto
   margin-bottom: 2em
   margin-top: $header-height - 1
+  overflow-x: hidden
   @media screen and (max-width: $phone-tablet-boundary)
     margin: 50px auto 0 auto
   @media screen and (max-width: $phone-boundary)
